--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body
     color: #333;
     text-align: center;
     font-family: "Courier";
-    font-size: 16px;
+    font-size: 16px; 
     margin: 0;
     padding: 0;
 }
@@ -27,7 +27,7 @@ body
 #container
 {
     width: 70%;
-    padding: 1cm;
+    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -36,4 +36,8 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    padding: 2em;
 }
