--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: gray;
     color: blue;
     text-align: center;
     font-family: "Arial";
@@ -15,7 +16,13 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5cm;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -39,5 +46,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 2em;
 }
